[tool.poetry]
authors = ["Sarat Chinni"]
description = ""
license = "MIT"
name = "ct_scan_detect"
version = "0.1.0"

[tool.poetry.dependencies]
kaggle = "^1.5.12"
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
